--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,4 +26,5 @@ jobs:
             git reset --hard origin/main
 
             # Limpiar contenedores e imágenes anteriores de manera segura
-            docker-compose up -d --build
+            docker-compose build --no-cache
+            docker-compose up -d
