--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,5 +26,7 @@ jobs:
             git reset --hard origin/main
 
             # Limpiar contenedores e imágenes anteriores de manera segura
+            docker-compose down
+            docker-compose rm -f
             docker-compose build --no-cache
             docker-compose up -d
