--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ari-client": "^0.1.3",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "ws": "^8.18.3"
