--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
+    "@types/ari-client": "^2.2.13",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.5.2",
