--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-ARI_URL=ws://127.0.0.1:8088/ari/events
+ARI_URL=wss://asterisk.ridinn.com/ari/events
 ARI_USER=node
 ARI_PASSWORD=ari_password
 ARI_APP_NAME=node
